snapotter/snapottersvc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: snapotter
  name: snapotter
  namespace: snapotter
spec:
  ports:
  - port: 1349
    protocol: TCP
    targetPort: 1349
  selector:
    app: snapotter
status:
  loadBalancer: {}
